# buoy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.10x/decisions/: buoy-product-identity-and-compatibility.md  data-vault-is-analogy-not-architecture.md  github-only-release-automation-v0-2-1.md  namespace-ranking-defaults.md  production-routing-remote-catalog.md
.10x/evidence/: 2026-06-20-incremental-plan-diff-engine-validation.md  2026-06-20-local-applied-state-store-validation.md  2026-06-28-repo-example-path-demotion-validation.md  2026-06-28-repo-file-card-metadata-validation.md  2026-07-02-docs-version-default-stop-validation.md  2026-07-02-docs-version-warning-visibility-validation.md  2026-07-02-website-docs-version-policy-validation.md  2026-07-13-readme-details-on-demand-rewrite.md  2026-07-14-buoy-brand-docs-assets-and-evals.md  2026-07-14-buoy-core-package-rename.md  2026-07-14-buoy-github-repository-rename.md  2026-07-14-buoy-local-compatibility.md  2026-07-14-buoy-release-integration-validation.md  2026-07-14-buoy-v0-2-0-release-attempt.md  2026-07-14-buoy-v0-2-1-github-release.md  2026-07-14-buoy-v0-2-1-workflow-repair.md  2026-07-14-depth-one-apply-pipeline.md  2026-07-14-finalize-v0-2-1-release-docs.md  2026-07-14-open-embedding-backend-bakeoff.md  2026-07-14-publish-buoy-rebrand-commit.md  2026-07-15-automatic-production-namespace-routing-implementation.md  2026-07-15-buoy-v0-3-0-sync-pr-readiness.md  2026-07-15-representative-semantic-routing-experiment.md  2026-07-16-buoy-v0-3-0-changelog-finalization.md  2026-07-16-buoy-v0-3-0-changelog-integration.md  2026-07-18-interactive-apply-confirmation.md  2026-07-18-markitdown-control-character-normalization.md  2026-07-18-retrieval-live-by-default.md  2026-07-18-thistle-qdrant-dead-end-disposition.md  2026-07-19-exclude-internal-records-from-buoy-v0-4-artifacts.md  2026-07-19-node24-github-actions-validation.md  2026-07-19-return-retrieval-tags-implementation.md  2026-07-19-sitemap-resource-limits.md  2026-07-19-website-exact-host-crawl-boundary.md  2026-07-20-dynamic-content-vector-dimension-shaping.md  2026-07-20-remove-buoy-internal-ranking-judgment.md  2026-07-20-repo-ranking-experiment-contract-freeze.md  2026-07-21-experimental-buoy-baseline-execution.md  2026-07-21-simple-main-release-automation-implementation.md  2026-07-23-command-center-acceptance-gap.md  (+13 more)
.10x/knowledge/: buoy-site-planning-workflow.md  documentation-details-on-demand.md  loopback-command-center-security.md  managed-plan-job-durability.md  (+2 more)
autoresearch/: program.md
docs/: command-center.md  evaluation.md  generic-site-rag-plan-apply.md  indexing.md  migrating-to-buoy.md  releasing.md  retrieval.md
scripts/: release_checks.py
tests/: test_applied_state.py  test_apply_cli.py  test_automatic_routing.py  test_autoresearch.py  test_catalog_pending.py  test_chunker.py  test_cli.py  test_command_center_api.py  test_command_center_cli.py  test_command_center_jobs.py  test_command_center_local.py  test_command_center_remote.py  test_config.py  test_crawler.py  test_crawler_exact_host.py  test_evals.py  test_github_repo.py  test_plan_artifacts.py  test_plan_cleanup.py  test_plan_diff.py  test_planning_service.py  test_release_automation.py  test_remote_catalog.py  test_retriever.py
web/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
(+230 files in other folders)
