[project]
name = "buoy-search"
version = "0.2.0"
description = "Plan, index, and search public knowledge sources with anchored citations."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Buoy maintainers" }]
dependencies = [
    "turbopuffer",
    "sentence-transformers",
    "PyYAML",
    "scrapling[fetchers]>=0.4.9",
    "markdownify>=1.2.0",
    "markitdown[docx,pdf,pptx,xls,xlsx]",
    "duckdb>=1.5.4",
    "portalocker>=3.2.0",
]

[project.urls]
Repository = "https://github.com/Doctacon/buoy-search"
Issues = "https://github.com/Doctacon/buoy-search/issues"

[project.scripts]
buoy = "buoy_search.cli:main"
turbo-search = "buoy_search.cli:legacy_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/buoy_search"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
